Resolving issues with text on carousel on smaller devices

--- a/src/frontend/css/app.css
+++ b/src/frontend/css/app.css
@@ -14217,10 +14217,6 @@ img.float-right,
 	.slick-prev {
 		bottom: 3rem;
 	}
-
-	.carousel-copyright-statement .text {
-		margin-right: 0;
-	}
 }
 
 @media screen and (max-width: 640px) {
