--- a/src/frontend/scss/layout/_common.scss
+++ b/src/frontend/scss/layout/_common.scss
@@ -1107,8 +1107,8 @@ color:red;
 	margin-right: 14px;
 }
 
-@media screen and (max-width: 764px) {
-    .carousel-copyright-statement .text {
-		margin-right: 0px;
-	}
-}
+// @media screen and (max-width: 764px) {
+//     .carousel-copyright-statement .text {
+// 		margin-right: 0px;
+// 	}
+// }
